<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.feature.application.thinkfast.ProgressActivity">

    <LinearLayout
        android:id="@+id/linearLayoutInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@color/light_Surface"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thinkfast_progress_date"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateTextViewValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/totalPlayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/think_fast_your_play_value"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalPLayTextViewValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/initial_value"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/totalScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/think_fast_your_score"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalScoreTextViewValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/initial_value"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTargetPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/targetScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:autoSizeTextType="uniform"
            android:lines="1"

            android:text="Daily Target Score:"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/targetScoreTextViewValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:lines="1"
            android:text="10"
            android:textColor="@color/black" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutTargetScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/targetPlayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:autoSizeTextType="uniform"
            android:lines="1"

            android:text="Daily Target Plays:"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/targetPlayTextViewValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:lines="1"

            android:text="2"
            android:textColor="@color/black" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@color/material_dynamic_primary80"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/progressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/analyze_your_think_fast_game_progress"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayoutTodayScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/todayScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="Today's Score: "


                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayoutProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="3dp"
                android:orientation="vertical"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:labelFor="@+id/txt"
                    android:scaleY="6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/percent_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="10sp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/initial_value"
                    android:textColor="@color/black">

                </TextView>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayoutFeedbackTodayScore"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/todayScoreFeedbackTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Feedback: "

                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/todayScoreFeedbackViewValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTodayPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/todayPlayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Today's Plays: "

                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayoutProgressBarTotalPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="3dp"
                android:orientation="vertical"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ProgressBar
                    android:id="@+id/progressBarTotalPlay"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:labelFor="@+id/txt"
                    android:scaleY="6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/percent_showTotalPlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="10sp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/initial_value"
                    android:textColor="@color/black">

                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutFeedbackTodayPlay"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/todayPlayFeedbackTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Feedback: "

                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/todayPlayFeedbackViewValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="17sp" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDone"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:background="@color/light_PrimaryVariant"
            android:text="@string/completed"
            android:textColor="@color/light_onPrimary"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="110dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:contentDescription="@string/content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/progress_target" />
</androidx.constraintlayout.widget.ConstraintLayout>